Active state done

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 </head>
 <body>
 <main>
-  <img src="./images/image-equilibrium.jpg" alt="icon">
+  <img id="NFTimg" src="./images/image-equilibrium.jpg" alt="icon">
+  <img id="view" src="./images/icon-view.svg" alt="icon-view">
   <div class="title">Equilibrium #3429</div>
 
   <p>Our Equilibrium collection promotes balance and calm.</p>
